extreme disaster integration test (#9930)
